# icinga-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/director_mcp/: __init__.py  client.py  server.py  settings.py
src/icinga2_mcp/: __init__.py  client.py  server.py  settings.py
tests/: test_perf_api.py
